<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_application">O aplikaciji</string>
    <string name="accept">Prihvatam</string>
    <string name="account_delete_confirmation">Ukoliko potvrdite brisanje naloga, nećete biti više u mogućnosti da povratite nalog i izgubićete sve podatke-transakcije koje su nastale korišćenjem vašeg naloga. Da li ste sigurni?</string>
    <string name="account_delete_failed">Nalog nije moguće izbrisati.</string>
    <string name="account_delete_reason_admin">Korisnik je administrator.</string>
    <string name="account_delete_reason_driver">Korisnik je vozač i ima prodate karte.</string>
    <string name="account_delete_reason_ew">Imate sredstva na E-nalogu ili aktivnu kartu.</string>
    <string name="account_delete_reason_id">Neispravan ID korisnika.</string>
    <string name="account_delete_reason_mc">Korisnik ima aktivnu mesečnu kartu, koja je istekla u zadnjih 60 dana.</string>
    <string name="account_delete_reason_mcactive">Korisnik ima aktivnu mesečnu kartu.</string>
    <string name="account_delete_reason_prepaid">Korisnik ima aktivnu prepaid kartu.</string>
    <string name="account_delete_reason_tc">Korisnik ima aktivnu vremensku kartu.</string>
    <string name="account_delete_success">Vaš nalog je uspešno izbrisan.</string>
    <string name="account_payment_transactions">Pregled svih uplata na korisnički nalog</string>
    <string name="account_settings">Nalog</string>
    <string name="accountnumberkey_title">Broj računa za uplatu</string>
    <string name="active_nicard_text">Aktivna</string>
    <string name="add">Dodaj</string>
    <string name="add_a_new_card">Poveži novu karticu</string>
    <string name="add_image_camera">Slikaj</string>
    <string name="add_image_delete">Ukloni</string>
    <string name="add_image_gallery">Izberi iz galerije</string>
    <string name="add_image_title">Dodajte sliku</string>
    <string name="add_nicard_text">Poveži sa postojećom digitalnom mesečnom, godišnjom ili povlašćenom kartom</string>
    <string name="add_user_name">Poštovani možete uneti Vaše ime i prezime, kako bi karta glasila na Vaše ime</string>
    <string name="address">Adresa</string>
    <string name="address_one_input">Adresa 1</string>
    <string name="address_payment">Adresa plaćanja</string>
    <string name="address_two_input">Adresa 2 (Opciono)</string>
    <string name="alerts">Obaveštenje</string>
    <string name="alerts_tab">Upozorenja</string>
    <string name="all_reserved_funds_text">Rezervisana virtuelna sredstva</string>
    <string name="all_stations">Sve stanice</string>
    <string name="all_transactions">Sve transankcije</string>
    <string name="allow_camera_permission">Morate da dozvolite pristup kameri</string>
    <string name="allsecure_payment_an_error_has_occurred">Nastala greška</string>
    <string name="allsecure_payment_bad_api">Nije dobro inicijalizovan api za plaćanje</string>
    <string name="allsecure_payment_empty_response_body">Prazan odgovor</string>
    <string name="allsecure_payment_error_messages_missing">Nedostaju poruke o grešci</string>
    <string name="allsecure_payment_expected_success_in_response">Očekivani uspeh u odgovoru</string>
    <string name="allsecure_payment_expected_token_and_fingerprint_in_response">Očekivan token i otisak kao odgovor</string>
    <string name="allsecure_payment_input_verification_failed">Verifikacija unosa nije uspela</string>
    <string name="allsecure_payment_invalid_public_integration_key">Nevažeći javni ključ integracije</string>
    <string name="allsecure_payment_invalid_token_key">Nevažeći ključ tokena</string>
    <string name="allsecure_payment_missing_tokenization_key_in_response">Nedostaje token ključ u odgovoru</string>
    <string name="allsecure_payment_receiving_token">Primanje tokena</string>
    <string name="allsecure_payment_unexpected_response_code">Neočekivani kod odgovora</string>
    <string name="amount_not_defined">Iznos nije definisan</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="api_limit_msg">Vaš dnevni limit korišćenja aplikacije je potrošen.</string>
    <string name="appName">BeogradPlus</string>
    <string name="app_name">BeogradPlus</string>
    <string name="app_version">Verzija aplikacije</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appearance">Tema</string>
    <string name="application_settings">Aplikacija</string>
    <string name="arrives_for">Stiže za</string>
    <string name="article_details">Detalji artikla</string>
    <string name="article_group">Grupa artikla</string>
    <string name="article_group_selection">Odabir karte za prevoz</string>
    <string name="article_name">Naziv artikla</string>
    <string name="article_total_payment">Ukupno za plaćanje:</string>
    <string name="article_transactions">Pregled ranije kupljenih karata</string>
    <string name="auto_prolong">Automatsko produženje</string>
    <string name="auto_top_up">Automatsko dopunjavanje</string>
    <string name="available_soon">Uskoro dostupno</string>
    <string name="back">Nazad</string>
    <string name="balance_finance">E-Nalog - Iznos avansnih sredstava</string>
    <string name="bank_authorization_code">1111</string>
    <string name="bank_authorization_code_title">Autorizacioni kod banke</string>
    <string name="beta_info">Koristite beta verziju. Očekujte redovna ažuriranja dok poboljšavamo i unapredjujemo aplikaciju.</string>
    <string name="bgnaplata">JKP NAPLATA PREVOZNE BEOGRAD</string>
    <string name="bgprevoz">SEKRETARIJAT ZA JAVNI PREVOZ</string>
    <string name="billing_info">Info o naplati</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bt_card_number_invalid">Neispravan broj kartice</string>
    <string name="bt_card_number_required">Broj kartice je obavezan</string>
    <string name="bt_cardholder_name_required">Ime vlasnika je obavezno</string>
    <string name="bt_cid">CID</string>
    <string name="bt_country_code_required">Country code is required</string>
    <string name="bt_cvc">CVC</string>
    <string name="bt_cvn">CVN</string>
    <string name="bt_cvv">CVV</string>
    <string name="bt_cvv_invalid">%s je neispravan</string>
    <string name="bt_cvv_required">%s je obavezan</string>
    <string name="bt_expiration_invalid">Datum isteka je neispravan</string>
    <string name="bt_expiration_required">Datum isteka je obavezan</string>
    <string name="bt_form_hint_card_number">Broj kartice</string>
    <string name="bt_form_hint_cardholder_name">Ime vlasnika</string>
    <string name="bt_form_hint_country_code">Country Code</string>
    <string name="bt_form_hint_cvv">CVV</string>
    <string name="bt_form_hint_expiration">Datum isteka</string>
    <string name="bt_form_hint_mobile_number">Mobile Number</string>
    <string name="bt_form_hint_postal_code">Postal Code</string>
    <string name="bt_mobile_number_required">Mobile number is required</string>
    <string name="bt_month">Month</string>
    <string name="bt_postal_code_required">Postal code is required</string>
    <string name="bt_save_card_checkbox_name">Save card</string>
    <string name="bt_year">Year</string>
    <string name="buy_now">Kupi</string>
    <string name="buy_right_to_drive">Kupovina prava na vožnju</string>
    <string name="buy_successfully_message">Uspešno ste izvršili prenos/uplatu avansnih sredstava u vrednosti od</string>
    <string name="buy_ticket">Kupi kartu</string>
    <string name="cancel">Odustani</string>
    <string name="cancel_phone_dialog">Nastavi bez unosa broja</string>
    <string name="cancel_rate">Odustani</string>
    <string name="company_address">27. marta 43-45</string>
    <string name="company_id">Matični broj</string>
    <string name="company_name">JKP Naplata prevozne usluge Beograd</string>
    <string name="company_name_var">Ime kompanije</string>
    <string name="company_url_var">Url kompanije</string>
    <string name="confirm">Potvrdi</string>
    <string name="country">Zemlja</string>
    <string name="country_name">Srbija</string>
    <string name="dont_have_account">Nemate nalog?</string>
    <string name="email">info@bgnaplata.rs</string>
    <string name="first_name">Ime</string>
    <string name="forgot_password">Zaboravili ste lozinku?</string>
    <string name="landline_phone">11 0 11</string>
    <string name="last_name">Prezime</string>
    <string name="log_in">Prijava</string>
    <string name="log_in_by_google">Prijava preko Google naloga</string>
    <string name="logo_text1">JKP Naplata prevozne usluge</string>
    <string name="logo_text2">Beograd</string>
    <string name="maticni_broj">21860638</string>
    <string name="mobile_phone">/</string>
    <string name="or_login_with">"ili "</string>
    <string name="phone_number_input">Broj telefona</string>
    <string name="pib_number">113402218</string>
    <string name="pib_text">PIB</string>
    <string name="private_policy">Politika privatnosti</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_or_username">Email</string>
    <string name="prompt_password">Lozinka</string>
    <string name="remember_me">Zapamti me</string>
    <string name="sign_up">Registracija</string>
    <string name="station_version_var">Verzija stanice</string>
    <string name="terms_of_service">Uslovi korišćenja</string>
    <string name="website_url">https://online.bgnaplata.rs</string>
    <string name="working_hours">ponedeljak - petak 8:00-16:00</string>
    <string name="working_time_text">Radno vreme</string>
</resources>