<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_about_app_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/toolbar" android:background="@color/status_bar" android:paddingTop="?actionBarSize" android:paddingBottom="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/back_btn" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/arrow_left" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="@color/white_color_only" />
        <TextView android:textSize="22.0sp" android:textStyle="bold" android:textColor="@color/white_color_only" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_application" android:layout_marginStart="16.0dip" app:layout_constraintStart_toEndOf="@id/back_btn" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView android:padding="16.0dip" android:layout_width="0.0dip" android:layout_height="0.0dip" android:overScrollMode="never" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/company_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/company_name_var" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:id="@id/company_name_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/company_name" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/company_name" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/address" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/company_name_tv" />
            <TextView android:id="@id/address_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/company_address" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/address" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/country" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/country" android:textAlignment="center" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/address_tv" />
            <TextView android:id="@id/country_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/country_name" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/country" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/company_url" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/company_url_var" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/country_tv" />
            <TextView android:id="@id/company_url_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/website_url" android:textAlignment="center" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/company_url" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/company_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/company_id" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/company_url_text" />
            <TextView android:id="@id/company_id_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/maticni_broj" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/company_id" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/pib" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/pib_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/company_id_tv" />
            <TextView android:id="@id/pib_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pib_number" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/pib" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/company_phone_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/phone_number_input" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/pib_tv" />
            <TextView android:id="@id/mobile_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/landline_phone" android:textAlignment="center" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/company_phone_number" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/landline_phone" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mobile_phone" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/mobile_phone" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/prompt_email" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/landline_phone" />
            <TextView android:id="@id/email_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/email" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/working_hours" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/working_time_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/email_tv" />
            <TextView android:id="@id/working_hours_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/working_hours" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/working_hours" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/stations_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/station_version_var" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/working_hours_tv" />
            <TextView android:id="@id/station_version" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/stations_version" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/app_version" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/station_version" />
            <TextView android:id="@id/build" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_version" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/app_version" />
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/privacy_policy_tile" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/build">
                <ImageView android:id="@id/privacy_policy_icon" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/outline_privacy_24" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="@color/icon_tint" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/privacy_policy_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/private_policy" android:layout_marginStart="6.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/privacy_policy_icon" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/arrow_right" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="@color/black_color" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/terms_tile" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/privacy_policy_tile">
                <ImageView android:id="@id/terms_icon" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/outline_privacy_24" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="@color/icon_tint" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:id="@id/terms_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_of_service" android:layout_marginStart="6.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/terms_icon" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/arrow_right" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="@color/black_color" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>