<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_user_name" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:id="@id/first_name_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/first_name" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <com.google.android.material.textfield.TextInputLayout android:id="@id/etFirstNameLayout" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/first_name_label">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/first_name_et" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:id="@id/last_name_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/last_name" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/etFirstNameLayout" />
    <com.google.android.material.textfield.TextInputLayout android:id="@id/etLastNameLayout" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/last_name_label">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/last_name_et" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button android:textColor="@color/white_color_only" android:id="@id/cancel_button" android:background="@drawable/button_with_feedback" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginTop="32.0dip" android:text="@string/cancel" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/etLastNameLayout" />
    <Button android:textColor="@color/white_color_only" android:id="@id/confirm_button" android:background="@drawable/button_with_feedback" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginTop="32.0dip" android:text="@string/confirm" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/etLastNameLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>