<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout1" android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/toolbar" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/toolbar" />
    <ScrollView android:id="@id/scroll_view" android:scrollbars="none" android:fadingEdgeLength="20.0dip" android:layout_width="0.0dip" android:layout_height="0.0dip" android:overScrollMode="never" android:requiresFadingEdge="vertical" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar">
        <RelativeLayout android:orientation="vertical" android:id="@id/scroll_view_container" android:paddingTop="10.0dip" android:paddingBottom="100.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
            <ImageView android:id="@id/logo_nis" android:layout_width="wrap_content" android:layout_height="100.0dip" android:src="@drawable/brand_logo" android:layout_centerHorizontal="true" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" />
            <TextView android:textSize="12.0dip" android:textStyle="bold" android:textColor="@color/white_color_only" android:id="@id/direkcija_nis_text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/logo_text1" android:layout_below="@id/logo_nis" android:layout_centerHorizontal="true" android:textAlignment="center" />
            <TextView android:textSize="12.0dip" android:textStyle="bold" android:textColor="@color/white_color_only" android:id="@id/direkcija_nis_text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/logo_text2" android:layout_below="@id/direkcija_nis_text1" android:layout_centerHorizontal="true" android:textAlignment="center" />
            <EditText android:textSize="15.0dip" android:textColor="@color/main_text_color" android:textColorHint="@color/dark_grey" android:id="@id/username" android:background="@drawable/edit_text_transparent" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:hint="@string/prompt_email_or_username" android:drawablePadding="@dimen/icon_padding" android:layout_below="@id/direkcija_nis_text2" android:inputType="textEmailAddress" android:drawableStart="@drawable/baseline_email_24" android:fontFamily="sans-serif" />
            <com.google.android.material.textfield.TextInputLayout android:id="@id/password_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/username" app:boxBackgroundMode="none" app:hintEnabled="false" app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText android:textSize="15.0dip" android:textColor="@color/main_text_color" android:textColorHint="@color/dark_grey" android:id="@id/password" android:background="@drawable/edit_text_transparent" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_password" android:drawablePadding="@dimen/icon_padding" android:inputType="textPassword" android:drawableStart="@drawable/baseline_lock_24" android:fontFamily="sans-serif" />
            </com.google.android.material.textfield.TextInputLayout>
            <CheckBox android:textSize="16.0dip" android:textColor="@color/white_color_only" android:id="@id/remember_me_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:checked="true" android:text="@string/remember_me" android:layout_below="@id/password_layout" android:buttonTint="@color/lines_in_list" />
            <androidx.appcompat.widget.AppCompatButton android:textSize="16.0dip" android:textColor="@color/main_text_in_background_of_primary_color" android:id="@id/login" android:background="@drawable/button_with_feedback" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/log_in" android:drawablePadding="-50.0dip" android:layout_below="@id/remember_me_checkbox" android:textAllCaps="false" android:drawableStart="@drawable/korisnik_belo" android:textAlignment="center" />
            <ProgressBar android:id="@id/loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/password_layout" android:layout_centerHorizontal="true" />
            <TextView android:textSize="16.0dip" android:textColor="@color/main_text_in_background_of_primary_color" android:id="@id/forgot_password_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/forgot_password" android:layout_below="@id/login" android:textAlignment="textStart" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" android:layout_alignStart="@id/login" android:layout_alignEnd="@id/login" />
            <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="@color/white_color_only" android:id="@id/login_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/or_login_with" android:layout_below="@id/forgot_password_link" android:textAlignment="center" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" android:layout_alignStart="@id/login" android:layout_alignEnd="@id/login" />
            <androidx.appcompat.widget.AppCompatButton android:textSize="16.0sp" android:id="@id/google_sign_in" android:background="@drawable/bg_white_rounded" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/log_in_by_google" android:drawablePadding="-40.0dip" android:layout_below="@id/login_text" android:textAllCaps="false" android:drawableStart="@drawable/google_custom2" android:textAlignment="center" android:paddingStart="10.0dip" />
            <com.facebook.login.widget.LoginButton android:layout_gravity="center_horizontal" android:id="@id/facebook_sign_in" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="30.0dip" android:layout_below="@id/google_sign_in" android:layout_centerHorizontal="true" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/facebook_sign_in">
                <TextView android:textSize="16.0sp" android:textColor="@color/white_color_only" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dont_have_account" />
                <androidx.appcompat.widget.AppCompatButton android:textSize="16.0sp" android:textColor="@color/white_color_only" android:id="@id/signUpButton" android:background="@drawable/button_with_feedback" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/sign_up" android:textAllCaps="false" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <ImageView android:id="@id/arrow_down" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:src="@drawable/slide_arow" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>